--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,7 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
     "fs": "^0.0.1-security",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
@@ -29,7 +32,8 @@
     "path": "^0.12.7",
     "razorpay": "^2.9.6",
     "short-unique-id": "^5.2.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "jest": "^29.7.0",
